--- a/src/components/window/WindowButtons.module.css
+++ b/src/components/window/WindowButtons.module.css
@@ -1,5 +1,4 @@
 .windowHeader {
-  display: block;
   display: flex;
   justify-content: space-between;
   height: 2em;
